@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 6d862fce0b0707949bb86058d777b116
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
